--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^7.1.1",
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "path": "^0.12.7",
     "react": "^15.6.1",
