--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "shopping list app",
   "main": "index.jsx",
   "scripts": {
-    "start": "nodemon server/server.js & webpack -w",
+    "start": "node server/server.js",
     "dev": "nodemon server/server.js & webpack -w"
   },
   "author": "walter shub",
