--- a/package.json
+++ b/package.json
@@ -15,7 +15,17 @@
     "express": "^4.15.3",
     "path": "^0.12.7",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "mongoose": "^4.11.4",
+    "nodemon": "^1.11.0",
+    "open": "0.0.5",
+    "webpack": "^3.4.1",
+    "webpack-dev-middleware": "^1.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
